--- a/package.yml
+++ b/package.yml
@@ -1,11 +1,11 @@
 name       : deadbeef
 version    : 0.7.2
-release    : 17
+release    : 18
 source     :
     - git|https://github.com/DeaDBeeF-Player/deadbeef.git : a764d6c86ab4c9901583f9fabb148d44a11480fb
 license    :
-    - LGPL-2.1
-    - GPL-2
+    - GPL-2.0-only
+    - LGPL-2.1-only
 component  : multimedia.audio
 summary    : DeaDBeeF is an audio player for GNU/Linux.
 description: |
