Update deadbeef to 1.9.0
Summary:
**Changelogs**

- [1.9.0](https://deadbeef.sourceforge.io/posts/deadbeef_1.9.0_is_out.html)
- [1.8.8](https://deadbeef.sourceforge.io/posts/deadbeef_1.8.8_is_out.html)

Test Plan: - Play some music

Reviewers: #triage_team, algent

Reviewed By: #triage_team, algent

Subscribers: algent

Differential Revision: https://dev.getsol.us/D13217

--- a/package.yml
+++ b/package.yml
@@ -1,11 +1,12 @@
 name       : deadbeef
-version    : 1.8.7
-release    : 39
+version    : 1.9.0
+release    : 40
 source     :
-    - git|https://github.com/DeaDBeeF-Player/deadbeef.git : 4e5e467f192aa6d5ce4bd109bbbb0b1bacfea2ed
+    - git|https://github.com/DeaDBeeF-Player/deadbeef.git : 1.9.0
 license    :
     - GPL-2.0-only
     - LGPL-2.1-only
+homepage   : https://deadbeef.sourceforge.io/
 component  : multimedia.audio
 summary    : DeaDBeeF is an audio player for GNU/Linux.
 description: |
