--- a/package.yml
+++ b/package.yml
@@ -14,25 +14,20 @@ description: |
 clang      : yes
 builddeps  :
     - pkgconfig(alsa)
-    - pkgconfig(dbus-1)
-    - pkgconfig(flac)
+    - pkgconfig(faad2)
     - pkgconfig(gtk+-3.0)
-    - pkgconfig(imlib2)
     - pkgconfig(jansson)
     - pkgconfig(libavcodec)
     - pkgconfig(libcddb)
     - pkgconfig(libcdio_paranoia)
     - pkgconfig(libcurl)
     - pkgconfig(libpulse-simple)
+    - pkgconfig(mad)
     - pkgconfig(opusfile)
     - pkgconfig(samplerate)
     - pkgconfig(sndfile)
-    - pkgconfig(vorbis)
     - pkgconfig(wavpack)
-    - faad-devel
-    - intltool
     - libdispatch-devel
-    - libmad-devel
     - yasm
 rundeps    :
     - opus-tools
