Update deadbeef to 1.9.3
Summary:
**Summarized Changelog**

- Fixed: Crash when loading certain malformed cuesheets
- Fixed: API behavior change regression causing certain plugins to malfunction
- Added: Support for building with FFMPEG 5.0

Full changelog [here](https://github.com/DeaDBeeF-Player/deadbeef/blob/master/ChangeLog)

Test Plan: - Play some music

Reviewers: #triage_team, algent

Reviewed By: #triage_team, algent

Subscribers: algent

Differential Revision: https://dev.getsol.us/D13845

--- a/package.yml
+++ b/package.yml
@@ -1,8 +1,8 @@
 name       : deadbeef
-version    : 1.9.1
-release    : 42
+version    : 1.9.3
+release    : 43
 source     :
-    - git|https://github.com/DeaDBeeF-Player/deadbeef.git : 1.9.2
+    - git|https://github.com/DeaDBeeF-Player/deadbeef.git : 1.9.3
 license    :
     - GPL-2.0-only
     - LGPL-2.1-only
@@ -39,3 +39,4 @@ build      : |
     %make
 install    : |
     %make_install
+    rm -r $installdir/usr/share/doc
